# detax

./: .env.example  .gitignore  MARKETING.md  Makefile  README.md  SZYBKI_START.md  TODO.md  docker-compose.override.yml  docker-compose.yml
cli/: detax  detax-cli.py
docker/postgres/: init.sql
examples/: 01_health.sh  02_ask_question.sh  03_ksef_module.sh  04_b2b_module.sh  05_zus_module.sh  06_vat_module.sh  07_interactive.sh  08_full_demo.sh  README.md
modules/api/: main.py  pyproject.toml
modules/api/routers/: commands_documents.py  commands_projects.py  context.py  documents.py  events.py  health.py  layout.py  projects.py  sources.py
modules/api/services/: data_sources.py  events.py
modules/frontend/: index.html  package.json  tsconfig.json
modules/frontend/css/: style.css
modules/frontend/js/: app.js  app.js.map
modules/frontend/src/: main.ts
modules/frontend/src/components/: ChatPanel.ts  ContextPanel.ts  DocumentsPanel.ts  Header.ts  ProjectsPanel.ts  SourcesPanel.ts
modules/frontend/src/core/: Component.ts
modules/frontend/src/ui/: chat.ts  dashboard.ts  documents.ts  projects.ts
scripts/: bielik-cli.sh  generate_api_docs.py  start.sh
tests/e2e/: conftest.py  test_documents_flow.py
